style.css
:root {
  --light-green: rgb(208, 244, 208);
  --dark-green: rgb(0, 128, 0);
}

.container {
  display: flex;
  justify-content: space-around;
  padding: 10px;
}
.container-items {
  display: flex;
  flex-direction: column;
  padding: 10px;
  gap: 10px;
}
.container-board {
  display: flex;
  flex-direction: column;
  padding: 10px;
  gap: 10px;
}
.buttons {
  display: flex;
  flex-direction: row;
  padding: 10px;
  gap: 10px;
}
.bingo-board {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 10px;
  }
.bingo-cell {
  width: 140px; /* Adjust width as needed */
  height: 140px; /* Adjust height as needed */
  overflow: scroll; /* Hide overflow content */
  /* text-overflow: ellipsis; 
  white-space: nowrap; */
  display: flex;
  align-items: center; /* Center content vertically */
  justify-content: center; /* Center content horizontally */
  border: 1px solid #000; /* Optional: adds a border */
  margin: 2px; /* Optional: adds space between cells */
  text-align: center; /* Center text */
  margin: 2px;
  padding: 5px;
}
.items-list {
  border: 1px solid #000;
  padding: 10px;
  width: 500px;
  max-height: 800px;
  overflow-y: auto;
}
.item {
  display: flex;
  justify-content: space-between;
  margin-bottom: 5px;
  padding: 6px;
  border: 1px solid #000;

}
.item-active {
  background-color: var(--light-green);
  border-radius: 8px;
}
.item-inactive {
  background-color: rgb(218, 218, 218);
  border-radius: 8px;
}
h1 {
  text-align: center;
  display: flex;
  justify-content: space-around;
  width: 100%;
}
h1 span {
  flex-grow: 1;
  text-align: center;
}

@media print {
  body * {
    visibility: hidden;
  }
  .container-board, .container-board * {
    visibility: visible;
  }
  .container-board {
    position: absolute;
    left: 0;
    top: 50px;
  }
}

